[package]
name = "healthcheck"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "healthcheck"
path = "src/main.rs"

[dependencies]
hyper = { version = "0.14", default-features = false, features = ["client", "http1", "tcp"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.release]
opt-level = "z"
lto = true
panic = 'abort'
codegen-units = 1
strip = true
